<resources>
    <string name="app_name">MenuExercise</string>
    <string name="action_settings">Settings</string>
    <string name="image_menu">ImageMenu</string>
    <string name="file_menu">FileMenu</string>
    <string name="file_sub_menu_1">FileSubMenu1</string>
    <string name="file_sub_menu2">FileSubMenu2</string>
    <string name="group_item_1">GroupItem1</string>
    <string name="group_item_2">GroupItem2</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="group_checkable">GroupCheckable</string>
    <string name="group_menu">GroupMenu</string>
    <string name="msg_body">This app is for menu examples and it has - Option Menu, Contextual Menu and Popup Menu</string>
    <string name="context_menu_item1">Context Item 1</string>
    <string name="context_menu_item2">Context Item 2</string>
    <string name="context_menu_item3">Context Item 3</string>
    <string name="context_menu_title">Contextual Menu</string>
    <string name="popup_item_1">PopUp Item 1</string>
    <string name="popup_item_2">PopUp Item 2</string>
    <string name="popup_item_3">PopUp Item 3</string>
    <string name="show_popUp_menu">Click on Image Menu (Star) to see PopUp Menu</string>
</resources>
